--- a/src/main/resources/Admin.fxml
+++ b/src/main/resources/Admin.fxml
@@ -1,20 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.VBox?>
 
+<?import javafx.scene.text.Text?>
+<BorderPane fx:id="mainBorderPane" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tn.esprit.Controllers.AdminController" stylesheets="@/style.css">
+   <left>
+      <VBox fx:id="sidebar" spacing="10" style="-fx-background-color: #1e1e1e; -fx-padding: 20;" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1">
+         <ImageView fx:id="logoImageView" fitHeight="200" fitWidth="200" layoutX="20" layoutY="20" pickOnBounds="true" preserveRatio="true" />
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.CategorieController">
-    <children>
-        <TableView fx:id="tableview" layoutX="200.0" layoutY="106.0" prefHeight="200.0" prefWidth="238.0">
-            <columns>
-                <TableColumn fx:id="idCol" prefWidth="75.0" text="Id" />
-                <TableColumn fx:id="nomCol" prefWidth="75.0" text="Nom" />
-                <TableColumn fx:id="descriptionCol" prefWidth="75.0" text="Description" />
-                <TableColumn fx:id="coverCol" prefWidth="75.0" text="Cover" />
-                <TableColumn fx:id="dateCol" prefWidth="114.0" text="Date de creation" />
-            </columns>
-        </TableView>
-    </children>
-</AnchorPane>
+         <Button fx:id="btnUsers" text="Users" style="-fx-text-fill: white; -fx-background-color: transparent;" onAction="#toggleUsersSubmenu"/>
+         <VBox fx:id="usersSubmenu" spacing="5" visible="false" managed="false" style="-fx-padding: 0 0 0 15;">
+            <Button text="Add User" style="-fx-text-fill: white; -fx-background-color: transparent;" />
+            <Button text="List Users" style="-fx-text-fill: white; -fx-background-color: transparent;" />
+         </VBox>
+
+         <Button fx:id="btnCommunities" text="Communities" style="-fx-text-fill: white; -fx-background-color: transparent;" onAction="#toggleCommunitiesSubmenu"/>
+         <VBox fx:id="communitiesSubmenu" spacing="5" visible="false" managed="false" style="-fx-padding: 0 0 0 15;">
+            <Button  fx:id="CategoriesBTN" text="Categories" style="-fx-text-fill: white; -fx-background-color: transparent;" onAction="#loadAllCategories"/>
+            <Button text="Communities" style="-fx-text-fill: white; -fx-background-color: transparent;" />
+         </VBox>
+      </VBox>
+   </left>
+   <center>
+      <Text fx:id="welcomeText" text="Welcome to Syncylinky!" style="-fx-font-size: 30; -fx-fill: #1e1e1e;" />
+   </center>
+</BorderPane>
