--- a/src/main/resources/Abonnements.fxml
+++ b/src/main/resources/Abonnements.fxml
@@ -10,29 +10,30 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.Button?>
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" fx:controller="tn.esprit.Controllers.CategoriesReadAllController">
+<AnchorPane xmlns:fx="http://javafx.com/fxml/1" fx:controller="tn.esprit.Controllers.AbonnementsController">
     <VBox spacing="10" AnchorPane.topAnchor="0" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0" AnchorPane.bottomAnchor="0" alignment="TOP_CENTER">
 
-        <Label text="Categories" textAlignment="CENTER">
+        <Label text="Abonnements" textAlignment="CENTER">
             <font>
                 <Font name="System Bold" size="25.0" />
             </font>
         </Label>
-        <TableView fx:id="tableviewCategories" prefHeight="700" prefWidth="700">
+        <TableView fx:id="tableviewAbonnement" prefHeight="700" prefWidth="700">
             <columns>
                 <TableColumn fx:id="idCol" prefWidth="75.0" text="Id" />
                 <TableColumn fx:id="nomCol" prefWidth="75.0" text="Nom" />
-                <TableColumn fx:id="descriptionCol" prefWidth="75.0" text="Description" />
-                <TableColumn fx:id="coverCol" prefWidth="75.0" text="Cover" />
-                <TableColumn fx:id="dateCol" prefWidth="114.0" text="Date de creation" />
+                <TableColumn fx:id="prixCol" prefWidth="75.0" text="Prix" />
+                <TableColumn fx:id="avantagesCol" prefWidth="75.0" text="Avantages" />
+                <TableColumn fx:id="typeCol" prefWidth="75.0" text="Type" />
                 <TableColumn fx:id="actionCol" text="Actions" prefWidth="150.0" />
             </columns>
         </TableView>
 
         <VBox spacing="10" alignment="TOP_CENTER">
             <TextField fx:id="nomField" promptText="Nom" />
-            <TextField fx:id="descriptionField" promptText="Description" />
-            <TextField fx:id="coverField" promptText="Cover" />
+            <TextField fx:id="prixField" promptText="Prix" />
+            <TextField fx:id="avantagesField" promptText="Avantages" />
+            <TextField fx:id="typeField" promptText="Type" />
 
             <Button fx:id="updateButton" style="-fx-background-color: #1e1e1e;" text="Update" onAction="#handleUpdateAction" disable="true" />
             <Button fx:id="addButton" style="-fx-background-color: #1e1e1e;" text="Add New Category" onAction="#handleAdd" />
