--- a/src/main/resources/AllCommunity.fxml
+++ b/src/main/resources/AllCommunity.fxml
@@ -42,6 +42,7 @@
 
             <TextField fx:id="nomField" promptText="Nom" />
             <TextField fx:id="descriptionField" promptText="Description" />
+            <Button style="-fx-background-color: #1e1e1e;" text="Upload Cover" onAction="#handleUploadImage" />
             <TextField fx:id="coverField" promptText="Cover" />
             <TextField fx:id="nbrMembreField" promptText="Nbr Membres" />
 
