--- a/src/main/resources/AllCommunity.fxml
+++ b/src/main/resources/AllCommunity.fxml
@@ -12,44 +12,49 @@
 <?import javafx.scene.control.ComboBox?>
 
 <AnchorPane xmlns:fx="http://javafx.com/fxml/1" fx:controller="tn.esprit.Controllers.CommunityReadAllController">
-    <VBox spacing="10" alignment="TOP_CENTER"
-          AnchorPane.topAnchor="0"
-          AnchorPane.leftAnchor="0"
-          AnchorPane.rightAnchor="0"
-          AnchorPane.bottomAnchor="0"
-          style="-fx-padding: 20;">
-        <Label text="Community" textAlignment="CENTER">
-            <font>
-                <Font name="System Bold" size="25.0" />
-            </font>
-        </Label>
+    <HBox spacing="20">
 
-        <TableView fx:id="tableviewCommunity" prefHeight="700" prefWidth="700">
-            <columns>
-                <TableColumn fx:id="idCol" prefWidth="75.0" text="Id" />
-                <TableColumn fx:id="nomCol" prefWidth="75.0" text="Nom" />
-                <TableColumn fx:id="descriptionCol" prefWidth="75.0" text="Description" />
-                <TableColumn fx:id="coverCol" prefWidth="75.0" text="Cover" />
-                <TableColumn fx:id="categoryCol" prefWidth="100.0" text="Category" />
-                <TableColumn fx:id="nbrCol" prefWidth="100.0" text="Nbr Membre" />
-                <TableColumn fx:id="statutCol" prefWidth="100.0" text="Statut" />
-                <TableColumn fx:id="createdAtCol" prefWidth="114.0" text="Created At" />
-                <TableColumn fx:id="actionCol" text="Actions" prefWidth="150.0" />
-            </columns>
-        </TableView>
+        <!-- Left: Table View -->
+        <VBox spacing="10" alignment="TOP_CENTER" styleClass="card-style">
+            <Label text="Communities" textAlignment="CENTER">
+                <font>
+                    <Font name="System Bold" size="25.0" />
+                </font>
+            </Label>
+            <TableView fx:id="tableviewCommunity" prefWidth="800" prefHeight="700" VBox.vgrow="ALWAYS">
+                <columns>
+                    <TableColumn fx:id="nomCol" prefWidth="75.0" text="Nom" />
+                    <TableColumn fx:id="descriptionCol" prefWidth="75.0" text="Description" />
+                    <TableColumn fx:id="coverCol" prefWidth="75.0" text="Cover" />
+                    <TableColumn fx:id="categoryCol" prefWidth="100.0" text="Category" />
+                    <TableColumn fx:id="nbrCol" prefWidth="50.0" text="Nbr Membre" />
+                    <TableColumn fx:id="statutCol" prefWidth="50.0" text="Statut" />
+                    <TableColumn fx:id="createdAtCol" prefWidth="114.0" text="Created At" />
+                    <TableColumn fx:id="actionCol" text="Actions" prefWidth="150.0" />
+                </columns>
+            </TableView>
+        </VBox>
 
-        <VBox spacing="10" alignment="TOP_CENTER">
+        <!-- Right: Add Form -->
+        <VBox fx:id="formContainer" spacing="10" alignment="TOP_CENTER" styleClass="card-style" HBox.hgrow="ALWAYS">
+            <Label styleClass="title-label" text="Add Community">
+                <font>
+                    <Font name="System Bold" size="18.0"/>
+                </font>
+            </Label>
 
             <TextField fx:id="nomField" promptText="Nom" />
             <TextField fx:id="descriptionField" promptText="Description" />
-            <Button style="-fx-background-color: #1e1e1e;" text="Upload Cover" onAction="#handleUploadImage" />
-            <TextField fx:id="coverField" promptText="Cover" />
+            <Button style="-fx-background-color: #1e1e1e; -fx-text-fill: white;" text="Upload Cover" onAction="#handleUploadImage" />
+            <TextField fx:id="coverField" promptText="Cover" editable="false" />
+
             <TextField fx:id="nbrMembreField" promptText="Nbr Membres" />
 
             <ComboBox fx:id="categoryComboBox" promptText="Select Category"/>
 
-            <Button fx:id="updateButton" style="-fx-background-color: #1e1e1e;" text="Update" onAction="#handleUpdateAction" disable="true" />
-            <Button fx:id="addButton" style="-fx-background-color: #1e1e1e;" text="Add New Community" onAction="#handleAdd" />
+            <Button fx:id="updateButton" style="-fx-background-color: #1e1e1e; -fx-text-fill: white;" text="Update" onAction="#handleUpdateAction" disable="true" />
+            <Button fx:id="addButton" text="Add New Community" style="-fx-background-color: #1e1e1e; -fx-text-fill: white;" onAction="#handleAdd" />
         </VBox>
-    </VBox>
+
+    </HBox>
 </AnchorPane>
