--- a/src/main/resources/AllCategories.fxml
+++ b/src/main/resources/AllCategories.fxml
@@ -11,20 +11,19 @@
 <?import javafx.scene.control.Button?>
 
 <AnchorPane xmlns:fx="http://javafx.com/fxml/1" fx:controller="tn.esprit.Controllers.CategoriesReadAllController">
-    <HBox spacing="20" AnchorPane.topAnchor="0" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0" AnchorPane.bottomAnchor="0" style="-fx-padding: 20;">
+    <HBox spacing="20">
 
         <!-- Left: Table View -->
-        <VBox spacing="10" alignment="TOP_CENTER">
+        <VBox spacing="10" alignment="TOP_CENTER" styleClass="card-style" VBox.vgrow="ALWAYS">
             <Label text="Categories" textAlignment="CENTER">
                 <font>
                     <Font name="System Bold" size="25.0" />
                 </font>
             </Label>
-            <TableView fx:id="tableviewCategories" prefHeight="700" prefWidth="700">
+            <TableView fx:id="tableviewCategories" prefWidth="800" prefHeight="700" VBox.vgrow="ALWAYS" >
                 <columns>
-                    <TableColumn fx:id="idCol" prefWidth="50.0" text="Id" />
-                    <TableColumn fx:id="nomCol" prefWidth="100.0" text="Nom" />
-                    <TableColumn fx:id="descriptionCol" prefWidth="150.0" text="Description" />
+                    <TableColumn fx:id="nomCol" prefWidth="100.0"  text="Nom" />
+                    <TableColumn fx:id="descriptionCol" prefWidth="250.0" text="Description" />
                     <TableColumn fx:id="coverCol" prefWidth="100.0" text="Cover" />
                     <TableColumn fx:id="dateCol" prefWidth="120.0" text="Date de creation" />
                     <TableColumn fx:id="actionCol" prefWidth="150.0" text="Actions" />
@@ -33,8 +32,8 @@
         </VBox>
 
         <!-- Right: Add Form -->
-        <VBox spacing="10" alignment="TOP_CENTER" style="-fx-background-color: #f5f5f5; -fx-padding: 20; -fx-border-radius: 8; -fx-background-radius: 8;">
-            <Label text="Add Categorie">
+        <VBox fx:id="formContainer" spacing="10" alignment="TOP_CENTER" styleClass="card-style" VBox.vgrow="ALWAYS">
+            <Label styleClass="title-label" text="Add Categorie">
                 <font>
                     <Font name="System Bold" size="18.0"/>
                 </font>
@@ -42,11 +41,11 @@
 
             <TextField fx:id="nomField" promptText="Nom" />
             <TextField fx:id="descriptionField" promptText="Description" />
-            <Button style="-fx-background-color: #1e1e1e; -fx-text-fill: white;" text="Upload Cover" onAction="#handleUploadImage" />
+            <Button styleClass="upload-btn" style="-fx-background-color: #1e1e1e; -fx-text-fill: white;" text="Upload Cover" onAction="#handleUploadImage" />
             <TextField fx:id="coverField" promptText="Cover Path" editable="false"/>
 
-            <Button fx:id="updateButton" text="Update" style="-fx-background-color: #1e1e1e; -fx-text-fill: white;" onAction="#handleUpdateAction" disable="true" />
-            <Button fx:id="addButton" text="Enregistrer" style="-fx-background-color: #1e1e1e; -fx-text-fill: white;" onAction="#handleAdd" />
+            <Button styleClass="upload-btn" fx:id="updateButton" text="Update" style="-fx-background-color: #1e1e1e; -fx-text-fill: white;" onAction="#handleUpdateAction" disable="true" />
+            <Button fx:id="addButton" text="Ajouter" onAction="#handleAdd" styleClass="add-btn" />
         </VBox>
 
     </HBox>
