--- a/src/main/resources/Gamifications.fxml
+++ b/src/main/resources/Gamifications.fxml
@@ -4,25 +4,35 @@
 <?import javafx.scene.text.Font?>
 
 <AnchorPane xmlns:fx="http://javafx.com/fxml/1" fx:controller="tn.esprit.Controllers.GamificationController">
-    <VBox spacing="10" AnchorPane.topAnchor="0" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0" AnchorPane.bottomAnchor="0" alignment="TOP_CENTER" style="-fx-padding: 20;">
-        <Label text="Gestion des Gamifications">
-            <font><Font name="System Bold" size="25.0" /></font>
-        </Label>
+    <HBox spacing="20">
 
+        <!-- Left: Table View -->
+        <VBox spacing="10" alignment="TOP_CENTER" styleClass="card-style">
+            <Label text="Gestion des Gamifications" textAlignment="CENTER">
+                <font>
+                    <Font name="System Bold" size="25.0" />
+                </font>
+            </Label>
+            <TableView fx:id="tableviewGamification" prefWidth="950" prefHeight="700" VBox.vgrow="ALWAYS">
+                <columns>
+                    <TableColumn fx:id="abonnementCol" text="Abonnement ID"/>
+                    <TableColumn fx:id="nomCol" text="Nom"/>
+                    <TableColumn fx:id="descriptionCol" text="Description"/>
+                    <TableColumn fx:id="typeCol" text="Type"/>
+                    <TableColumn fx:id="conditionCol" text="Condition"/>
+                    <TableColumn fx:id="actionCol" text="Actions" prefWidth="150.0"/>
+                </columns>
+            </TableView>
+        </VBox>
 
-        <TableView fx:id="tableviewGamification" >
-            <columns>
-                <TableColumn fx:id="idCol" text="ID"/>
-                <TableColumn fx:id="abonnementCol" text="Abonnement ID"/>
-                <TableColumn fx:id="nomCol" text="Nom"/>
-                <TableColumn fx:id="descriptionCol" text="Description"/>
-                <TableColumn fx:id="typeCol" text="Type"/>
-                <TableColumn fx:id="conditionCol" text="Condition"/>
-                <TableColumn fx:id="actionCol" text="Actions" prefWidth="150.0" />
-            </columns>
-        </TableView>
+        <!-- Right: Add Form -->
+        <VBox fx:id="formContainer" spacing="10" alignment="TOP_CENTER" styleClass="card-style" HBox.hgrow="ALWAYS">
+            <Label styleClass="title-label" text="Add Gamification">
+                <font>
+                    <Font name="System Bold" size="18.0"/>
+                </font>
+            </Label>
 
-        <VBox spacing="10" alignment="TOP_CENTER">
             <ComboBox fx:id="abonnementCombo" promptText="Choisir un Abonnement"/>
             <TextField fx:id="nomField" promptText="Nom"/>
             <TextField fx:id="descriptionField" promptText="Description"/>
@@ -34,5 +44,6 @@
                 <Button fx:id="updateButton" style="-fx-background-color: #1e1e1e;" text="Modifier" onAction="#handleUpdateAction" disable="true"/>
             </HBox>
         </VBox>
-    </VBox>
+
+    </HBox>
 </AnchorPane>
