--- a/src/main/resources/style.css
+++ b/src/main/resources/style.css
@@ -26,3 +26,66 @@
 .VBox{
     -fx-background-color: #1e1e1e;
 }
+.card-style {
+    -fx-background-color: white;
+    -fx-padding: 20;
+    -fx-background-radius: 15;
+    -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.1), 10, 0.2, 0, 2);
+}
+
+.add-btn {
+    -fx-background-color: #007bff;
+    -fx-text-fill: white;
+    -fx-font-weight: bold;
+    -fx-padding: 10 20;
+    -fx-background-radius: 50;
+}
+.upload-btn {
+    -fx-background-color: #f0f0f0;
+    -fx-text-fill: #333;
+    -fx-background-radius: 8;
+    -fx-padding: 6 12;
+}
+
+
+.add-btn:hover {
+    -fx-background-color: #0056b3;
+}
+.title-label {
+    -fx-font-size: 18px;
+    -fx-font-weight: bold;
+    -fx-text-fill: #333;
+}
+.form-card {
+    -fx-background-color: white;
+    -fx-padding: 30;
+    -fx-background-radius: 15;
+    -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.1), 10, 0.2, 0, 4);
+}
+
+.table-view {
+    -fx-font-size: 14px;
+    -fx-table-cell-border-color: transparent;
+    -fx-padding: 10;
+    -fx-cell-size: 40px; /* Hauteur fixe des lignes */
+}
+
+.table-view .column-header,
+.table-view .filler {
+    -fx-size: 40px;
+    -fx-background-color: #f5f5f5;
+    -fx-border-color: transparent;
+    -fx-alignment: CENTER-LEFT;
+}
+
+.table-view .table-row-cell {
+    -fx-background-color: white;
+    -fx-border-color: transparent transparent #eaeaea transparent;
+    -fx-padding: 5 10 5 10;
+}
+
+.table-view .table-row-cell:filled:selected,
+.table-view .table-row-cell:focused:selected {
+    -fx-background-color: #e0f3ff;
+}
+
