--- a/src/main/resources/AllCategories.fxml
+++ b/src/main/resources/AllCategories.fxml
@@ -1,28 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.Button?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" fx:controller="tn.esprit.Controllers.CategoriesReadAllController">
-    <HBox spacing="20">
+<AnchorPane prefHeight="844.0" prefWidth="1034.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/21" fx:controller="tn.esprit.Controllers.CategoriesReadAllController">
+    <HBox prefHeight="830.0" prefWidth="1020.0" spacing="20">
 
         <!-- Left: Table View -->
-        <VBox spacing="10" alignment="TOP_CENTER" styleClass="card-style" VBox.vgrow="ALWAYS">
+        <VBox alignment="TOP_CENTER" spacing="10" styleClass="card-style" VBox.vgrow="ALWAYS">
             <Label text="Categories" textAlignment="CENTER">
                 <font>
-                    <Font name="System Bold" size="25.0" />
+                    <Font name="System Bold" size="89.0" />
                 </font>
             </Label>
-            <TableView fx:id="tableviewCategories" prefWidth="800" prefHeight="700" VBox.vgrow="ALWAYS" >
+         <ImageView fitHeight="168.0" fitWidth="156.0" pickOnBounds="true" preserveRatio="true">
+            <image>
+               <Image url="@images/202477.png" />
+            </image>
+         </ImageView>
+            <TableView fx:id="tableviewCategories" prefHeight="700" prefWidth="800" VBox.vgrow="ALWAYS">
                 <columns>
-                    <TableColumn fx:id="nomCol" prefWidth="100.0"  text="Nom" />
+                    <TableColumn fx:id="nomCol" prefWidth="100.0" text="Nom" />
                     <TableColumn fx:id="descriptionCol" prefWidth="250.0" text="Description" />
                     <TableColumn fx:id="coverCol" prefWidth="100.0" text="Cover" />
                     <TableColumn fx:id="dateCol" prefWidth="120.0" text="Date de creation" />
@@ -32,20 +39,25 @@
         </VBox>
 
         <!-- Right: Add Form -->
-        <VBox fx:id="formContainer" spacing="10" alignment="TOP_CENTER" styleClass="card-style" VBox.vgrow="ALWAYS">
+        <VBox fx:id="formContainer" alignment="TOP_CENTER" prefHeight="1002.0" prefWidth="198.0" spacing="10" styleClass="card-style" VBox.vgrow="ALWAYS">
             <Label styleClass="title-label" text="Add Categorie">
                 <font>
-                    <Font name="System Bold" size="18.0"/>
+                    <Font name="System Bold" size="26.0" />
                 </font>
             </Label>
+         <ImageView fitHeight="254.0" fitWidth="186.0" pickOnBounds="true" preserveRatio="true">
+            <image>
+               <Image url="@images/3d-minimal-shopping-category-online-shopping-concept-special-discount-offer-smartphone-with-a-shopping-category-screen-3d-illustration-png.png" />
+            </image>
+         </ImageView>
 
             <TextField fx:id="nomField" promptText="Nom" />
             <TextField fx:id="descriptionField" promptText="Description" />
-            <Button styleClass="upload-btn" style="-fx-background-color: #1e1e1e; -fx-text-fill: white;" text="Upload Cover" onAction="#handleUploadImage" />
-            <TextField fx:id="coverField" promptText="Cover Path" editable="false"/>
+            <Button onAction="#handleUploadImage" style="-fx-background-color: #1e1e1e; -fx-text-fill: white;" styleClass="upload-btn" text="Upload Cover" />
+            <TextField fx:id="coverField" editable="false" promptText="Cover Path" />
 
-            <Button styleClass="upload-btn" fx:id="updateButton" text="Update" style="-fx-background-color: #1e1e1e; -fx-text-fill: white;" onAction="#handleUpdateAction" disable="true" />
-            <Button fx:id="addButton" text="Ajouter" onAction="#handleAdd" styleClass="add-btn" />
+            <Button fx:id="updateButton" disable="true" onAction="#handleUpdateAction" style="-fx-background-color: #1e1e1e; -fx-text-fill: white;" styleClass="upload-btn" text="Update" />
+            <Button fx:id="addButton" onAction="#handleAdd" styleClass="add-btn" text="Ajouter" />
         </VBox>
 
     </HBox>
