--- a/src/main/resources/Gamifications.fxml
+++ b/src/main/resources/Gamifications.fxml
@@ -1,49 +1,68 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" fx:controller="tn.esprit.Controllers.GamificationController">
-    <HBox spacing="20">
+<AnchorPane prefHeight="800.0" prefWidth="1266.0" styleClass="flow-pane" stylesheets="@styleAb.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tn.esprit.Controllers.GamificationController">
+    <HBox prefHeight="648.0" prefWidth="1238.0" spacing="20">
 
         <!-- Left: Table View -->
-        <VBox spacing="10" alignment="TOP_CENTER" styleClass="card-style">
-            <Label text="Gestion des Gamifications" textAlignment="CENTER">
+        <VBox alignment="TOP_CENTER" spacing="10" styleClass="card-style">
+            <Label text="Gestion des Gamifications" textAlignment="CENTER" textFill="#232222">
                 <font>
-                    <Font name="System Bold" size="25.0" />
+                    <Font name="System Bold" size="62.0" />
                 </font>
             </Label>
-            <TableView fx:id="tableviewGamification" prefWidth="950" prefHeight="700" VBox.vgrow="ALWAYS">
+         <ImageView fitHeight="156.0" fitWidth="172.0" pickOnBounds="true" preserveRatio="true">
+            <image>
+               <Image url="@images/1925184.png" />
+            </image>
+         </ImageView>
+            <TableView fx:id="tableviewGamification" prefHeight="700" prefWidth="950" VBox.vgrow="ALWAYS">
                 <columns>
-                    <TableColumn fx:id="abonnementCol" text="Abonnement ID"/>
-                    <TableColumn fx:id="nomCol" text="Nom"/>
-                    <TableColumn fx:id="descriptionCol" text="Description"/>
-                    <TableColumn fx:id="typeCol" text="Type"/>
-                    <TableColumn fx:id="conditionCol" text="Condition"/>
-                    <TableColumn fx:id="actionCol" text="Actions" prefWidth="150.0"/>
+                    <TableColumn fx:id="abonnementCol" text="Abonnement" /> <TableColumn fx:id="nomCol" text="Nom" />
+                    <TableColumn fx:id="descriptionCol" text="Description" />
+                    <TableColumn fx:id="typeCol" text="Type" />
+                    <TableColumn fx:id="conditionCol" text="Condition" />
+                    <TableColumn fx:id="actionCol" prefWidth="150.0" text="Actions" />
                 </columns>
             </TableView>
         </VBox>
 
         <!-- Right: Add Form -->
-        <VBox fx:id="formContainer" spacing="10" alignment="TOP_CENTER" styleClass="card-style" HBox.hgrow="ALWAYS">
-            <Label styleClass="title-label" text="Add Gamification">
+        <VBox fx:id="formContainer" alignment="TOP_CENTER" prefHeight="907.0" prefWidth="268.0" spacing="10" styleClass="card-style" HBox.hgrow="ALWAYS">
+            <Label stylesheets="@stylePay.css" text="Add Gamification" textFill="#2b2a2a">
                 <font>
-                    <Font name="System Bold" size="18.0"/>
+                    <Font name="Century Gothic Bold" size="30.0" />
                 </font>
             </Label>
 
-            <ComboBox fx:id="abonnementCombo" promptText="Choisir un Abonnement"/>
-            <TextField fx:id="nomField" promptText="Nom"/>
-            <TextField fx:id="descriptionField" promptText="Description"/>
-            <TextField fx:id="typeField" promptText="Type"/>
-            <TextField fx:id="conditionField" promptText="Condition Gamification"/>
+            <ComboBox fx:id="abonnementCombo" promptText="Choisir un Abonnement" stylesheets="@styleAb.css" />
+            <TextField fx:id="nomField" promptText="Nom" />
+            <TextField fx:id="descriptionField" promptText="Description" />
+            <TextField fx:id="typeField" promptText="Type" />
+            <TextField fx:id="conditionField" promptText="Condition Gamification" />
 
-            <HBox spacing="10" alignment="CENTER">
-                <Button fx:id="addButton" style="-fx-background-color: #1e1e1e;" text="Ajouter" onAction="#handleAdd"/>
-                <Button fx:id="updateButton" style="-fx-background-color: #1e1e1e;" text="Modifier" onAction="#handleUpdateAction" disable="true"/>
+            <HBox alignment="CENTER" spacing="10">
+                <Button fx:id="addButton" onAction="#handleAdd" prefHeight="50.0" prefWidth="107.0" style="-fx-background-color: #1e1e1e;" styleClass="pay-button" stylesheets="@styleAb.css" text="Ajouter" />
+                <Button fx:id="updateButton" disable="true" onAction="#handleUpdateAction" prefHeight="50.0" prefWidth="104.0" style="-fx-background-color: #1e1e1e;" stylesheets="@stylePay.css" text="Modifier" />
             </HBox>
         </VBox>
 
     </HBox>
+   <ImageView fitHeight="276.0" fitWidth="275.0" layoutX="977.0" layoutY="511.0" pickOnBounds="true" preserveRatio="true">
+      <image>
+         <Image url="@images/3251650.png" />
+      </image>
+   </ImageView>
 </AnchorPane>
