--- a/src/main/resources/communityFront.fxml
+++ b/src/main/resources/communityFront.fxml
@@ -4,50 +4,20 @@
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
-<BorderPane fx:id="FrontBorderpane" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tn.esprit.Controllers.MainController">
-    <top>
-        <HBox alignment="CENTER" spacing="10" style="-fx-background-color: #1A2A44; -fx-padding: 10;">
-            <ImageView fitHeight="200" fitWidth="200" layoutX="20" layoutY="20" pickOnBounds="true" preserveRatio="true">
-                <Image url="/images/logo TYPO blue.png"/>
-            </ImageView>
-            <TextField promptText="Search friends, videos..." prefWidth="500" />
-            <Label text="0 Point" style="-fx-text-fill: white;" />
-            <ImageView fitHeight="30" fitWidth="30">
-                <Image url="/images/avatar.jpg"/>
-            </ImageView>
+<AnchorPane fx:id="comunityAnchorPane" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tn.esprit.Controllers.ComunityFrontController" prefWidth="1920" prefHeight="1080">
+    <VBox spacing="20" style="-fx-background-color: #1A2A44; -fx-padding: 20;">
+        <Label text="Categories" style="-fx-text-fill: white; -fx-font-size: 18; -fx-font-weight: bold;" />
+        <ScrollPane fitToHeight="true" pannable="true" style="-fx-background: #1A2A44;">
+            <HBox fx:id="categorySlider" alignment="CENTER_LEFT" spacing="10" style="-fx-padding: 10;" />
+        </ScrollPane>
+
+        <HBox alignment="CENTER_LEFT" spacing="10">
+            <Label text="Community" style="-fx-text-fill: white; -fx-font-size: 18; -fx-font-weight: bold;" />
+            <Button text="Suggestions" style="-fx-text-fill: white;" />
+            <Button text="Popular" style="-fx-text-fill: white;" />
+            <Button text="My Community" style="-fx-text-fill: white;" />
+            <Button text="+ Create Community" style="-fx-background-color: #3B82F6; -fx-text-fill: white;" />
         </HBox>
-    </top>
-
-    <left>
-        <VBox spacing="10" style="-fx-background-color: #1A2A44; -fx-padding: 10;">
-            <Button text="Feed" style="-fx-text-fill: white;" />
-            <Button text="Messages" style="-fx-text-fill: white;" />
-            <Button text="Community" style="-fx-text-fill: white;" />
-            <Label text="My community" style="-fx-text-fill: white; -fx-font-weight: bold;" />
-            <Button text="Oriental" style="-fx-text-fill: white;" />
-            <Button text="Pilate" style="-fx-text-fill: white;" />
-            <VBox spacing="5">
-                <Button text="Football" style="-fx-text-fill: white;" />
-                <Button onAction="#loadUserAbonnementsView" text="Abonnement" style="-fx-text-fill: white; -fx-padding: 5 15; -fx-font-size: 10px;" />
-            </VBox>
-        </VBox>
-    </left>
-
-    <center>
-        <VBox spacing="20" style="-fx-background-color: #1A2A44; -fx-padding: 20;">
-            <Label text="Categories" style="-fx-text-fill: white; -fx-font-size: 18; -fx-font-weight: bold;" />
-            <ScrollPane fitToHeight="true" pannable="true" style="-fx-background: #1A2A44;">
-                <HBox fx:id="categorySlider" alignment="CENTER_LEFT" spacing="10" style="-fx-padding: 10;" />
-            </ScrollPane>
-
-            <HBox alignment="CENTER_LEFT" spacing="10">
-                <Label text="Community" style="-fx-text-fill: white; -fx-font-size: 18; -fx-font-weight: bold;" />
-                <Button text="Suggestions" style="-fx-text-fill: white;" />
-                <Button text="Popular" style="-fx-text-fill: white;" />
-                <Button text="My Community" style="-fx-text-fill: white;" />
-                <Button text="+ Create Community" style="-fx-background-color: #3B82F6; -fx-text-fill: white;" />
-            </HBox>
-            <GridPane fx:id="communityGrid" hgap="10" vgap="10" />
-        </VBox>
-    </center>
-</BorderPane>
+        <GridPane fx:id="communityGrid" hgap="10" vgap="10" />
+    </VBox>
+</AnchorPane>
