--- a/src/main/resources/AllCommunity.fxml
+++ b/src/main/resources/AllCommunity.fxml
@@ -11,9 +11,9 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" fx:controller="tn.esprit.Controllers.CommunityReadAllController">
-    <HBox spacing="20">
-
+<?import javafx.scene.layout.BorderPane?>
+<BorderPane xmlns:fx="http://javafx.com/fxml/1" fx:controller="tn.esprit.Controllers.CommunityReadAllController">
+    <center>
         <!-- Left: Table View -->
         <VBox spacing="10" alignment="TOP_CENTER" styleClass="card-style" VBox.vgrow="ALWAYS">
             <Label text="Communities" textAlignment="CENTER">
@@ -34,7 +34,8 @@
                 </columns>
             </TableView>
         </VBox>
-
+    </center>
+    <right>
         <!-- Right: Add Form -->
         <VBox fx:id="formContainer" spacing="10" alignment="TOP_CENTER" styleClass="card-style" HBox.hgrow="ALWAYS">
             <Label styleClass="title-label" text="Add Community">
@@ -55,6 +56,5 @@
             <Button fx:id="updateButton" style="-fx-background-color: #1e1e1e; -fx-text-fill: white;" text="Update" onAction="#handleUpdateAction" disable="true" />
             <Button fx:id="addButton" styleClass="add-btn" text="Add New Community" onAction="#handleAdd" />
         </VBox>
-
-    </HBox>
-</AnchorPane>
+    </right>
+</BorderPane>
